# fortimailapi

./: README.md  pyproject.toml
fortimailapi/: fortimailapi.py
